🐛 FIX: fix color for tmux and nvim, set escape time for tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,9 @@
 set -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
 
+# escape-time
+set -sg escape-time 10
+
 # hack for st
 set -as terminal-overrides ',st*:Ss@'
 
@@ -13,8 +16,8 @@ bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # nova-tmux
-set -ga terminal-overrides ",xterm-256color:Tc"
-set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",tmux-256color"
+set -g default-terminal "tmux-256color"
 set -g status-style 'bg=#1E272C,fg=#6A7D89'
 set -g window-status-current-style 'fg=cyan'
 set -g mode-style 'bg=cyan,fg=black'
