🐛 FIX: fix color scheme for tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,6 +15,10 @@ bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
+## DEFAULT COLOR
+set -ga terminal-overrides ",tmux-256color"
+set -g default-terminal "tmux-256color"
+
 ## COLORSCHEME: gruvbox dark
 set-option -g status "on"
 
