--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,7 +16,7 @@ bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 ## DEFAULT COLOR
-set -ga terminal-overrides ",tmux-256color"
+set -ga terminal-overrides ",st-256color"
 set -g default-terminal "tmux-256color"
 
 ## COLORSCHEME: gruvbox dark
