--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,26 +22,27 @@ set -g default-terminal "tmux-256color"
 ## COLORSCHEME: gruvbox dark
 set-option -g status "on"
 
-# default statusbar colors
-set-option -g status-style bg=colour237,fg=colour223
+# default statusbar color
+set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
 
 # default window title colors
-set-window-option -g window-status-style bg=colour214,fg=colour237
+set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
 
-set-window-option -g window-status-activity-style bg=colour237,fg=colour248
+# default window with an activity alert
+set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
 
 # active window title colors
-set-window-option -g window-status-current-style bg=default,fg=colour237
+set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
 
 # pane border
-set-option -g pane-active-border-style fg=colour250
-set-option -g pane-border-style fg=colour237
+set-option -g pane-active-border-style fg=colour250 #fg2
+set-option -g pane-border-style fg=colour237 #bg1
 
 # message infos
-set-option -g message-style bg=colour239,fg=colour223
+set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
 
 # writing commands inactive
-set-option -g message-command-style bg=colour239,fg=colour223
+set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
 
 # pane number display
 set-option -g display-panes-active-colour colour250 #fg2
@@ -51,22 +52,18 @@ set-option -g display-panes-colour colour237 #bg1
 set-window-option -g clock-mode-colour colour109 #blue
 
 # bell
-set-window-option -g window-status-bell-style fg=colour235,bg=colour167 #bg, red
-
+set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
 
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-set-option -g status-style "none"
 set-option -g status-justify "left"
-set-option -g status-left-style "none"
+set-option -g status-left-style none
 set-option -g status-left-length "80"
-set-option -g status-right-style "none"
+set-option -g status-right-style none
 set-option -g status-right-length "80"
-set-window-option -g window-status-activity-style "none"
-set-window-option -g window-status-style "none"
 set-window-option -g window-status-separator ""
 
 set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
 set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour237, bg=colour248] #h "
 
-set-window-option -g window-status-current-format "#[fg=colour239, bg=colour248, :nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
+set-window-option -g window-status-current-format "#[fg=colour237, bg=colour214, nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
 set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
