--- a/i3/config
+++ b/i3/config
@@ -260,7 +260,7 @@ mode "resize" {
 }
 
 # Lock screen
-bindsym $mod+9 exec --no-startup-id blurlock
+bindsym $mod+9 exec --no-startup-id betterlockscreen
 
 # Autostart applications
 ## adjustment of i3bar battery reading (only run at the very first login):
@@ -276,7 +276,7 @@ exec --no-startup-id clipit
 # exec_always --no-startup-id sbxkb
 exec --no-startup-id start_conky_maia
 # exec --no-startup-id start_conky_green
-exec --no-startup-id xautolock -time 20 -locker blurlock
+exec --no-startup-id xautolock -time 20 -locker 'betterlockscreen -w dim'
 exec --no-startup-id caffeine
 exec --no-startup-id insync start
 exec --no-startup-id numlockx
