--- a/i3/config
+++ b/i3/config
@@ -21,7 +21,7 @@ bindsym $mod+n border normal
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Cantarell 10
+font pango:Victor Mono SemiBold 12
 
 # Use Mouse+$mod to drag floating windows
 floating_modifier $mod
@@ -56,7 +56,7 @@ bindsym $mod+Ctrl+m exec pavucontrol
 
 # Start Applications
 bindsym $mod+Ctrl+b exec kitty -e 'bmenu'
-bindsym $mod+F2 exec chromium
+bindsym $mod+F2 exec chromium --force-dark-mode
 bindsym $mod+F3 exec thunar
 # bindsym $mod+F3 exec ranger
 bindsym $mod+Shift+F3 exec gksu thunar
