--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,5 @@
 font_family Victor Mono SemiBold
 font_size 13.0
 enable_audio_bell no
-include nord.conf
+/* include nord.conf */
+include papercolor-kitty/papercolor-dark.conf
