📦 NEW: add PaperColor to kitty, replace vimwiki with wiki.vim

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
 font_family Victor Mono SemiBold
 font_size 13.0
 enable_audio_bell no
-/* include nord.conf */
-include papercolor-kitty/papercolor-dark.conf
+include nord.conf
+/* include papercolor-kitty/papercolor-dark.conf */
