--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,3 +3,4 @@ font_size 13.0
 enable_audio_bell no
 include nord.conf
 /* include papercolor-kitty/papercolor-dark.conf */
+/* include papercolor-kitty/papercolor-light.conf */
