--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,8 @@
 font_family Victor Mono SemiBold
 font_size 13.0
 enable_audio_bell no
-include nord.conf
+/* include nord.conf */
 /* include papercolor-kitty/papercolor-dark.conf */
 /* include papercolor-kitty/papercolor-light.conf */
+include seoul256/seoul256.conf
+/* include seoul256/seoul256-light.conf */
