👌 IMPROVE: make tmux play nice w/ nvim, del thefuck

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,24 +1,9 @@
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-run '~/.tmux/plugins/tpm/tpm'
-
-## DEFAULT COLOR
-set -ga terminal-overrides ",tmux-256color"
-set -g default-terminal "tmux-256color"
-
 # scrolling
 set -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
 
 # kitty history
 bind-key o capture-pane -S - -e \; save-buffer /tmp/tmux-buffer \; new-window -a "less +G -fr /tmp/tmux-buffer\n"
-
-# use emacs key bindings
-setw -g mode-keys 'emacs'
 
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 1
@@ -51,6 +36,9 @@ bind-key -r C-s send-prefix
 # Restoring Clear Scren
 bind C-l send-keys 'C-l'
 
+# restore neovim session
+set -g @resurrect-strategy-nvim 'session'
+
 # panes: window splitting
 unbind %
 bind | split-window -h
@@ -76,7 +64,6 @@ if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
 if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
-
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
@@ -87,5 +74,15 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 set-option -g status-bg '#666666'
 set-option -g status-fg '#aaaaaa'
 set-option -g status-left-length 50
-set-option -g status-right " #(battery -t)  #(date '+%a, %b %d - %I:%M') "
+set-option -g status-right "#(date '+%a, %b %d - %H:%M') "
 set-option -g status-interval 60
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @continuum-restore 'on'
+
+run -b '~/.tmux/plugins/tpm/tpm'
