👌 IMPROVE: improve tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,7 @@ set -g repeat-time 1000
 
 # start window index at 1 instead of 0
 set -g base-index 1
+set -g renumber-windows on
 
 # start pane index at 1 instead of 0
 setw -g pane-base-index 1
@@ -39,11 +40,24 @@ bind C-l send-keys 'C-l'
 # restore neovim session
 set -g @resurrect-strategy-nvim 'session'
 
+# session navigation
+bind-key w choose-tree
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+set-option -s set-clipboard off
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X rectangle-toggle
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+bind-key -T copy-mode-vi DragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+
 # panes: window splitting
 unbind %
-bind | split-window -h
+bind \ split-window -h -c '#{pane_current_path}'
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c '#{pane_current_path}'
 
 # resize panes
 bind -r H resize-pane -L 5   # 5 px bigger to the left
@@ -69,6 +83,12 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+# open new windo in current directory
+bind c new-window -c '#{pane_current_path}'
+
+# break pin out to a new window
+bind-key b break-pane -d
 
 # status bar
 set-option -g status-bg '#666666'
