--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -55,7 +55,7 @@ bind-key -T copy-mode-vi DragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -
 
 # panes: window splitting
 unbind %
-bind \ split-window -h -c '#{pane_current_path}'
+bind '\' split-window -h -c '#{pane_current_path}'
 unbind '"'
 bind - split-window -v -c '#{pane_current_path}'
 
