👌 IMPROVE: add tmux-continuum, vim-tmux-runner, resizing windows

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,9 +37,6 @@ bind-key -r C-s send-prefix
 # Restoring Clear Scren
 bind C-l send-keys 'C-l'
 
-# restore neovim session
-set -g @resurrect-strategy-nvim 'session'
-
 # session navigation
 bind-key w choose-tree
 
@@ -87,7 +84,7 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 # open new windo in current directory
 bind c new-window -c '#{pane_current_path}'
 
-# break pin out to a new window
+# break pane out to a new window
 bind-key b break-pane -d
 
 # status bar
@@ -101,5 +98,14 @@ set-option -g status-interval 60
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# tmux resurrect options
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+
+# tmux continuum options
+set -g @continuum-restore 'on'
+set -g @continuum-boot 'on'
 
 run -b '~/.tmux/plugins/tpm/tpm'
