👌 IMPROVE: remove ocaml/merlin setup from nvim config, add workflow options to tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,9 +37,6 @@ bind-key -r C-s send-prefix
 # Restoring Clear Scren
 bind C-l send-keys 'C-l'
 
-# session navigation
-bind-key w choose-tree
-
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 set-option -s set-clipboard off
@@ -81,11 +78,38 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
-# open new windo in current directory
+# open new window in current directory
 bind c new-window -c '#{pane_current_path}'
 
 # break pane out to a new window
 bind-key b break-pane -d
+
+# Prompted join-pane
+bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
+
+# Easily swap a pane (targeted by pane number) with the current pane
+bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
+
+# Quickly view system & process info in htop
+bind-key h split-window -h "htop"
+
+# Quickly edit todo list
+bind-key t split-window -h "nvim ~/todo.md"
+
+# Quickly edit a file in your wiki
+bind-key v split-window -h -c ~/wiki "nvim $(fd | fzy)"
+
+# session navigation
+bind-key C-w choose-tree
+
+# Fuzzy tmux session switching
+bind w split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzy | xargs tmux switch-client -t"
+
+# Breaking out session
+bind-key C-b send-keys 'tat && exit' 'C-m'
+
+# Killing sessions
+bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
 
 # status bar
 set-option -g status-bg '#666666'
