👌 IMPROVE: move todo folder for syncing

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -94,7 +94,7 @@ bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 bind-key h split-window -h "htop"
 
 # Quickly edit todo list
-bind-key t split-window -h "nvim ~/todo.md"
+bind-key t split-window -h "nvim ~/todo/todo.md"
 
 # Quickly edit a file in your wiki
 bind-key v split-window -h -c ~/wiki "nvim $(fd | fzy)"
