👌 IMPROVE: tmux join panes vertically instead of horizontally

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -85,7 +85,7 @@ bind c new-window -c '#{pane_current_path}'
 bind-key b break-pane -d
 
 # Prompted join-pane
-bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
+bind-key j command-prompt -p "join pane from: "  "join-pane -v -s '%%'"
 
 # Easily swap a pane (targeted by pane number) with the current pane
 bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
