🐛 FIX: kill session key binding

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -109,7 +109,7 @@ bind w split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tm
 bind-key C-b send-keys 'tat && exit' 'C-m'
 
 # Killing sessions
-bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
+bind-key C-k run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
 
 # status bar
 set-option -g status-bg '#666666'
