👌 IMPROVE: improve iceberg color theme & tmux

--- a/kitty/iceberg.conf
+++ b/kitty/iceberg.conf
@@ -1,10 +1,10 @@
 # background
-foreground            #D8DEE9
-background            #161822
+foreground            #c5c8c6
+background            #1d1f21
 selection_foreground  #000000
-selection_background  #FFFACD
-url_color             #0087BD
-cursor                #81A1C1
+selection_background  #f0c674
+url_color             #5f819d
+cursor                #81a2be
 
 # black
 color0 #161821
