--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -112,8 +112,8 @@ bind-key C-b send-keys 'tat && exit' 'C-m'
 bind-key C-k run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
 
 # status bar
-set-option -g status-bg '#666666'
-set-option -g status-fg '#aaaaaa'
+set-option -g status-bg '#707880'
+set-option -g status-fg '#C5C8C6'
 set-option -g status-left-length 50
 set-option -g status-right "#(date '+%a, %b %d - %H:%M') "
 set-option -g status-interval 60
