👌 IMPROVE: improve iceberg color scheme for kitty

--- a/kitty/iceberg.conf
+++ b/kitty/iceberg.conf
@@ -1,10 +1,10 @@
 # background
-foreground            #c5c8c6
-background            #1d1f21
+foreground            #6b7089
+background            #161821
 selection_foreground  #000000
-selection_background  #f0c674
-url_color             #5f819d
-cursor                #81a2be
+selection_background  #e2a478
+url_color             #84a0c6
+cursor                #ada0d3
 
 # black
 color0 #161821
