👌 IMPROVE: use rg instead of grep

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -62,7 +62,7 @@ bind -r L resize-pane -R 5   # 5 px bigger right
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+    | rg -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
 bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
@@ -103,7 +103,7 @@ bind-key v split-window -h -c ~/wiki "nvim $(fd | fzy)"
 bind-key C-w choose-tree
 
 # Fuzzy tmux session switching
-bind w split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzy | xargs tmux switch-client -t"
+bind w split-window -v "tmux list-sessions | sed -E 's/:.*$//' | rg -v \"^$(tmux display-message -p '#S')\$\" | fzy | xargs tmux switch-client -t"
 
 # Breaking out session
 bind-key C-b send-keys 'tat && exit' 'C-m'
