👌 IMPROVE: lighter color for foreground in iceberg theme

--- a/kitty/iceberg.conf
+++ b/kitty/iceberg.conf
@@ -1,5 +1,5 @@
 # background
-foreground            #6b7089
+foreground            #c6c8d1
 background            #161821
 selection_foreground  #000000
 selection_background  #e2a478
