👌 IMPROVE: add kill session 0 for tmux-resurrect/continuum

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -109,6 +109,8 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 # tmux resurrect options
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
+# automatically kill session 0
+set -g @resurrect-hook-pre-restore-pane-processes 'tmux switch-client -n && tmux kill-session -t=0'
 
 # tmux continuum options
 set -g @continuum-restore 'on'
