--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -74,8 +74,8 @@ bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 # Quickly view system & process info in htop
 bind-key h split-window -h "htop"
 
-# Quickly edit todo list
-bind-key t split-window -h "nvim ~/todo/todo.md"
+# Quickly edit todo/Dumpfile
+bind-key t split-window -h "nvim ~/wiki/braindump/Dumpfile.md"
 
 # Quickly edit a file in your wiki
 bind-key v split-window -h -c ~/wiki "nvim $(fd | fzy)"
