--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -71,8 +71,8 @@ bind-key j command-prompt -p "join pane from: "  "join-pane -v -s '%%'"
 # Easily swap a pane (targeted by pane number) with the current pane
 bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 
-# Quickly view system & process info in htop
-bind-key h split-window -h "htop"
+# Quickly view system & process info in ytop (htop alternative in Rust)
+bind-key h split-window -h "ytop"
 
 # Quickly edit todo/Dumpfile
 bind-key t split-window -h "nvim ~/wiki/braindump/Dumpfile.md"
