👌 IMPROVE: Rebind key bindings for kitty tabs
This commit will swap the key bindings for moving kitty tabs and moving _between_ kitty tabs

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,3 +3,8 @@ font_size 13.0
 enable_audio_bell no
 allow_remote_control yes
 include nord.conf
+
+map ctrl+shift+. next_tab
+map ctrl+shift+, previous_tab
+map ctrl+shift+right move_tab_forward
+map ctrl+shift+left move_tab_backward
