--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,8 +2,9 @@
 set -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
 
-# falcon color theme
-source-file ~/.tmux/falcon.tmux.conf
+# color theme (falcon is default)
+# https://www.onwebsecurity.com/configuration/customize-and-theme-tmux-the-easy-way.html
+run-shell "tmux source-file ~/.tmux.\${TMUX_THEME:-default}.theme"
 
 # kitty history
 bind-key o capture-pane -S - -e \; save-buffer /tmp/tmux-buffer \; new-window -a "less +G -fr /tmp/tmux-buffer\n"
