📖 DOC: Update links

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,7 @@
 set -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
 
-# color theme (falcon is default)
+# color theme
 # https://www.onwebsecurity.com/configuration/customize-and-theme-tmux-the-easy-way.html
 run-shell "tmux source-file ~/.tmux.\${TMUX_THEME:-default}.theme"
 
@@ -109,6 +109,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin "arcticicestudio/nord-tmux"
 
 # tmux resurrect options
 set -g @resurrect-hook-pre-restore-pane-processes 'tmux switch-client -n && tmux kill-session -t 0'
