📦 NEW: Add send pane shortcut

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -71,9 +71,10 @@ bind-key b break-pane -d
 
 # Prompted join-pane
 bind-key j command-prompt -p "join pane from: "  "join-pane -v -s '%%'"
+bind-key s command-prompt -p "send pane to: "  "join-pane -v -t '%%'"
 
 # Easily swap a pane (targeted by pane number) with the current pane
-bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
+bind-key S display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 
 # Quickly view system & process info in ytop (htop alternative in Rust)
 bind-key h split-window -h "ytop"
